--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -2,14 +2,15 @@ name: Run Trading Bot
 
 on:
   schedule:
-    # Ejecutar cada 10 minutos entre 9:00 y 16:00 hora de Nueva York
-    - cron: "*/10 13-20 * * 1-5"  # UTC equivale a 9am–4pm NY, lunes a viernes
+    # 🕘 Cada 5 minutos durante horas de mercado (lunes a viernes)
+    - cron: "*/5 13-20 * * 1-5"
+    # 🌙 Cada hora fuera del horario de mercado (modo ligero)
+    - cron: "0 0-12,21-23 * * *"
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -24,12 +25,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot
+      - name: Run Trading Bot
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
         run: |
-          echo "🚀 Ejecutando bot de mercado (9am–4pm ET)"
+          echo "🚀 Ejecutando bot.py (intervalo dinámico)"
           python bot.py
+
+      - name: Cleanup old logs (7-day retention)
+        run: |
+          echo "🧹 Limpiando logs antiguos"
+          find . -name "*.log" -type f -mtime +7 -delete
