--- a/.github/workflows/update_results.yml
+++ b/.github/workflows/update_results.yml
@@ -1,39 +1,34 @@
-name: Update Trade Results
+name: Update & Notify Results
 
 on:
   schedule:
-    # 🕒 Cada 5 minutos — sincronizado con run-bot.yml
-    - cron: "*/5 * * * *"
-  workflow_dispatch:
+    - cron: "*/5 * * * *"   # ⏱️ Ejecutar cada 5 minutos
+  workflow_dispatch:         # Permitir ejecución manual desde GitHub
 
 jobs:
   update-results:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: 🧩 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run results updater
+      - name: ⚙️ Run update_results.py
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
         run: |
-          echo "📈 Verificando confirmaciones y resultados..."
+          echo "🚀 Ejecutando actualización automática de mercado y señales..."
           python update_results.py
-
-      - name: Cleanup old logs (7-day retention)
-        run: |
-          echo "🧹 Limpiando logs antiguos"
-          find . -name "*.log" -type f -mtime +7 -delete
