--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -2,18 +2,20 @@ name: Run Trading Bot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # cada 5 minutos (UTC). El bot maneja horario/mercados internamente
+    - cron: "*/2 * * * *"        # cada 2 minutos, 24/7
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    timeout-minutes: 6
+
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
@@ -22,11 +24,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot
+      - name: Run bot (full-scan)
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
+          # parámetros del modo full-scan
+          PRE_THRESHOLD: "80"
+          CONFIRM_THRESHOLD: "80"
+          CONFIRM_WAIT_MIN: "5"
+          CYCLES: "3"             # 3 sub-ciclos por cada run
+          SLEEP_SECONDS: "60"     # 1 minuto entre sub-ciclos
         run: |
           python bot.py
