--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,38 +1,32 @@
-name: Run Trading Bot
+name: Run Trading Bot 24/7
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # cada 5 minutos
+    - cron: '*/5 * * * *'   # cada 5 min
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  trading-bot:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 15
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
-      - name: Run bot
+      - name: Run Bot
         env:
-          TZ: "America/New_York"
+          GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
-          GMAIL_USER: ${{ secrets.GMAIL_USER }}
-          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
-          ALERT_ES: ${{ secrets.ALERT_ES }}
           ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
         run: |
           echo "🚀 Ejecutando bot.py"
-          python bot.py
+          python bot.py || echo "⚠️ Bot crash — será reiniciado en el próximo ciclo"
