--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,31 +1,29 @@
-name: Run Trading Bot
+name: Run Trading Bot (Continuous Mode)
 
 on:
   schedule:
-    # ⏰ Ejecución diaria
-    - cron: '0 12 * * *'   # 8:00 AM ET
-    - cron: '30 13 * * *'  # 9:30 AM ET
-    - cron: '0 14 * * *'   # 10:00 AM ET
-    - cron: '30 15 * * *'  # 11:30 AM ET
-    - cron: '0 17 * * *'   # 1:00 PM ET
-    - cron: '0 22 * * *'   # 6:00 PM ET (inicio Globex)
-    - cron: '0 2 * * *'    # 10:00 PM ET (Globex activo)
-  workflow_dispatch:       # 🔘 Permite que lo ejecutes manualmente
+    - cron: '*/5 * * * *'   # ⏱️ cada 5 minutos exactos (24/7)
+  workflow_dispatch:         # 🟢 permite ejecución manual desde Actions
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    timeout-minutes: 20      # evita que se congele
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: 🚀 Ejecutando bot.py
         run: |
+          echo "Iniciando Trading Bot..."
           python bot.py
