--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,57 +1,74 @@
-# ==========================================================
-# 🚀 WORKFLOW: TRADING BOT 2025 (Ejecución Continua)
-# ==========================================================
-# ✅ Corre automáticamente cada 15 minutos (24/7)
-# ✅ Usa Python 3.11
-# ✅ Mantiene logs detallados en GitHub Actions
-# ✅ Carga credenciales seguras desde Secrets
-# ✅ Reintenta en caso de error
-# ✅ Envía salida completa de debug al panel de acciones
-# ==========================================================
-
 name: Run Trading Bot (Continuous Mode)
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Cada 15 minutos (24/7)
-  workflow_dispatch:        # Permite ejecución manual
+    # Ejecuta cada hora (a los minutos 00)
+    - cron: "0 * * * *"
+  workflow_dispatch: # permite ejecución manual
+    inputs:
+      reason:
+        description: "Motivo del run manual"
+        required: false
+        default: "Ejecución manual"
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 30
 
     steps:
-      - name: 🧩 Clonar repositorio
+      - name: 🚀 Iniciando Trading Bot...
+        run: echo "🚀 Iniciando Trading Bot (Continuous Mode)..."
+
+      # Clona el repositorio
+      - name: 📥 Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🐍 Configurar Python
+      # Configura Python
+      - name: 🐍 Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: 📦 Instalar dependencias
+      # Instala dependencias
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          echo "✅ Dependencias instaladas."
 
-      - name: ⚙️ Configurar variables de entorno
+      # Test de variables para debugging (no muestra valores)
+      - name: 🧩 Check environment variables
+        run: |
+          echo "GOOGLE_CREDS_JSON set: ${{ secrets.GOOGLE_CREDS_JSON != '' }}"
+          echo "GOOGLE_CREDS set: ${{ secrets.GOOGLE_CREDS != '' }}"
+          echo "SPREADSHEET_ID set: ${{ secrets.SPREADSHEET_ID != '' }}"
+          echo "ALPHA_VANTAGE_KEY set: ${{ secrets.ALPHA_VANTAGE_KEY != '' }}"
+          echo "✅ Variables verificadas."
+
+      # Ejecuta el bot
+      - name: ▶️ Run bot.py
         env:
+          GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
           GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDS }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
-        run: echo "✅ Variables de entorno cargadas"
-
-      - name: 🧠 Ejecutar Trading Bot
-        env:
-          GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDS }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
           ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
         run: |
-          echo "🚀 Iniciando Trading Bot..."
-          python bot.py
+          echo "🏁 Ejecutando bot.py"
+          python bot.py || echo "⚠️ Error detectado durante la ejecución."
 
-      - name: 📜 Guardar logs de ejecución
-        if: always()
+      # Si el bot falla, registra el error y programa reintento
+      - name: 🔁 Auto-retry if failed
+        if: failure()
         run: |
-          echo "🧾 Registro de ejecución finalizado."
+          echo "⚠️ El bot falló. Se reintentará en la próxima ejecución."
+          echo "⌛ Manteniendo logs limpios para próxima iteración."
+
+      # Limpieza de caché (evita saturación)
+      - name: 🧹 Clean up
+        run: |
+          rm -rf __pycache__
+          echo "🧽 Limpieza finalizada."
