--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,13 +1,18 @@
-name: Run Trading Bot (Continuous Mode)
+name: Run Trading Bot (Adaptive Mode - 24/7)
 
 on:
   schedule:
-    # Ejecuta cada hora (a los minutos 00)
-    - cron: "0 * * * *"
-  workflow_dispatch: # permite ejecución manual
+    # Horarios adaptativos según sesión:
+    # - Cada 5 min de 00:00 a 13:00 ET → Globex (premercado y nocturno)
+    - cron: "*/5 0-13 * * *"
+    # - Cada 5 min de 13:00 a 21:00 ET → NYSE (mercado regular)
+    - cron: "*/5 13-21 * * *"
+    # - Cada 60 min de 21:00 a 23:59 ET → off-market (mantenimiento)
+    - cron: "0 21-23 * * *"
+  workflow_dispatch:
     inputs:
       reason:
-        description: "Motivo del run manual"
+        description: "Manual run reason"
         required: false
         default: "Ejecución manual"
 
@@ -15,39 +20,52 @@ jobs:
   run-bot:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    name: "Trading Bot 2025 Execution"
 
     steps:
-      - name: 🚀 Iniciando Trading Bot...
-        run: echo "🚀 Iniciando Trading Bot (Continuous Mode)..."
+      # ==============================
+      # 1️⃣ INICIO Y PREPARACIÓN
+      # ==============================
+      - name: 🚀 Iniciando Trading Bot
+        run: |
+          echo "---------------------------------------------"
+          echo "🚀 Trading Bot 2025 — Adaptive Continuous Mode"
+          echo "🕒 $(date)"
+          echo "---------------------------------------------"
 
-      # Clona el repositorio
-      - name: 📥 Checkout repo
+      - name: 📥 Checkout repositorio
         uses: actions/checkout@v4
 
-      # Configura Python
+      # ==============================
+      # 2️⃣ CONFIGURACIÓN PYTHON
+      # ==============================
       - name: 🐍 Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Instala dependencias
-      - name: 📦 Install dependencies
+      - name: 📦 Instalar dependencias
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          echo "✅ Dependencias instaladas."
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
+          echo "✅ Dependencias instaladas correctamente."
 
-      # Test de variables para debugging (no muestra valores)
-      - name: 🧩 Check environment variables
+      # ==============================
+      # 3️⃣ VALIDAR VARIABLES (SECRETOS)
+      # ==============================
+      - name: 🧩 Verificar secrets
         run: |
-          echo "GOOGLE_CREDS_JSON set: ${{ secrets.GOOGLE_CREDS_JSON != '' }}"
-          echo "GOOGLE_CREDS set: ${{ secrets.GOOGLE_CREDS != '' }}"
-          echo "SPREADSHEET_ID set: ${{ secrets.SPREADSHEET_ID != '' }}"
-          echo "ALPHA_VANTAGE_KEY set: ${{ secrets.ALPHA_VANTAGE_KEY != '' }}"
-          echo "✅ Variables verificadas."
+          echo "GOOGLE_CREDS_JSON cargado: ${{ secrets.GOOGLE_CREDS_JSON != '' }}"
+          echo "SPREADSHEET_ID cargado: ${{ secrets.SPREADSHEET_ID != '' }}"
+          echo "ALERT_DEFAULT cargado: ${{ secrets.ALERT_DEFAULT != '' }}"
+          echo "✅ Variables ambientales verificadas."
 
-      # Ejecuta el bot
-      - name: ▶️ Run bot.py
+      # ==============================
+      # 4️⃣ EJECUCIÓN DEL BOT
+      # ==============================
+      - name: ▶️ Ejecutar bot.py
         env:
           GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
           GOOGLE_CREDS: ${{ secrets.GOOGLE_CREDS }}
@@ -57,18 +75,20 @@ jobs:
           ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
           ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
         run: |
-          echo "🏁 Ejecutando bot.py"
+          echo "🏁 Iniciando análisis de mercado..."
           python bot.py || echo "⚠️ Error detectado durante la ejecución."
 
-      # Si el bot falla, registra el error y programa reintento
-      - name: 🔁 Auto-retry if failed
+      # ==============================
+      # 5️⃣ REINTENTO Y LIMPIEZA
+      # ==============================
+      - name: 🔁 Auto-retry si falla
         if: failure()
         run: |
-          echo "⚠️ El bot falló. Se reintentará en la próxima ejecución."
-          echo "⌛ Manteniendo logs limpios para próxima iteración."
+          echo "⚠️ El bot presentó un error, se reintentará en la próxima ejecución."
+          echo "⌛ Guardando logs para depuración."
 
-      # Limpieza de caché (evita saturación)
-      - name: 🧹 Clean up
+      - name: 🧹 Limpieza de caché y temporales
         run: |
           rm -rf __pycache__
-          echo "🧽 Limpieza finalizada."
+          rm -rf .pytest_cache
+          echo "🧽 Limpieza completada correctamente."
