--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,66 +1,42 @@
 name: Run Trading Bot (Continuous Mode)
 
 on:
+  workflow_dispatch:     # permite ejecutarlo manualmente
   schedule:
-    # ⏰ Cada 30 minutos, 24/7
-    - cron: "*/30 * * * *"
-  workflow_dispatch:
+    - cron: "0 * * * *"  # cada hora, todos los días
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 25
 
     steps:
-      # ==========================================================
-      # 🧩 1️⃣ PREPARAR ENTORNO
-      # ==========================================================
       - name: 🚀 Iniciando Trading Bot...
-        run: echo "🚀 Iniciando Trading Bot..."
+        run: echo "🚀 Iniciando Trading Bot 2025 (Continuous Mode)..."
 
-      - name: 🧭 Clonar repositorio
+      - name: 🧰 Clonando repositorio
         uses: actions/checkout@v4
 
-      # ==========================================================
-      # 🐍 2️⃣ CONFIGURAR PYTHON
-      # ==========================================================
-      - name: ⚙️ Configurar Python
+      - name: 🐍 Configurando Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
-      - name: 📦 Instalar dependencias
+      - name: 📦 Instalando dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # ==========================================================
-      # 🔐 3️⃣ VARIABLES DE ENTORNO (CREDENCIALES)
-      # ==========================================================
-      - name: 🔑 Configurar variables secretas
+      - name: 🤖 Ejecutando bot principal
         env:
           GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
           ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
-        run: echo "✅ Variables configuradas correctamente"
-
-      # ==========================================================
-      # 🤖 4️⃣ EJECUTAR BOT PRINCIPAL
-      # ==========================================================
-      - name: 🧠 Ejecutar bot.py
-        env:
-          GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
-          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
+          ALPHA_VANTAGE_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
-          echo "▶️ Ejecutando bot.py"
-          python bot.py || echo "⚠️ Error detectado, se intentará en el siguiente ciclo."
+          echo "▶️ Ejecutando bot.py..."
+          python bot.py
 
-      # ==========================================================
-      # 📜 5️⃣ GUARDAR LOGS Y RESULTADOS
-      # ==========================================================
-      - name: 📊 Finalizar ejecución
-        if: always()
-        run: echo "✅ Ejecución finalizada correctamente — $(date)"
+      - name: ✅ Finalizado
+        run: echo "✅ Ejecución completada correctamente."
