--- a/.github/workflows/update_results.yml
+++ b/.github/workflows/update_results.yml
@@ -1,38 +1,42 @@
 name: Update & Notify Results
 
 on:
+  workflow_dispatch:     # Permite ejecución manual
   schedule:
-    - cron: "0 * * * *"        # ⏰ cada hora en UTC (7 AM ET = 12 UTC)
-  workflow_dispatch:            # permite ejecución manual
+    - cron: "30 23 * * *"  # Cada día a las 11:30 PM UTC (~6:30 PM ET)
 
 jobs:
   update-results:
     runs-on: ubuntu-latest
 
-    env:
-      GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
-      SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-      ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
-      ALERT_ES: ${{ secrets.ALERT_ES }}
-      ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
-      ALPHA_VANTAGE_KEY: ${{ secrets.NEWS_API_KEY }}  # o cámbialo si ya lo renombras
-      TZ: "America/New_York"
-
     steps:
-      - name: Checkout repository
+      - name: 🚀 Ejecutando actualización automática de mercado y señales***
+        run: echo "🚀 Ejecutando actualización automática de mercado y señales***"
+
+      - name: 🧰 Clonando repositorio
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Configurando Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: 📦 Instalando dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run update_results.py
+      - name: 🔄 Ejecutando update_results.py
+        env:
+          GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+          ALERT_ES: ${{ secrets.ALERT_ES }}
+          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
-          echo "🚀 Ejecutando actualización automática de mercado y señales..."
+          echo "▶️ Ejecutando update_results.py..."
           python update_results.py
+
+      - name: ✅ Finalizado
+        run: echo "✅ Actualización completada correctamente."
