--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -1,42 +1,35 @@
 name: Run Trading Bot (Continuous Mode)
 
 on:
-  workflow_dispatch:     # permite ejecutarlo manualmente
+  workflow_dispatch:   # 🔹 Permite lanzarlo manualmente desde GitHub Actions
   schedule:
-    - cron: "0 * * * *"  # cada hora, todos los días
+    - cron: "0 * * * *"   # 🔹 Ejecutar automáticamente cada hora
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
-      - name: 🚀 Iniciando Trading Bot...
-        run: echo "🚀 Iniciando Trading Bot 2025 (Continuous Mode)..."
-
-      - name: 🧰 Clonando repositorio
+      - name: 🧾 Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🐍 Configurando Python 3.10
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      - name: 📦 Instalando dependencias
+      - name: 📦 Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --upgrade pip
+          pip install gspread google-auth yfinance pandas pytz requests
 
-      - name: 🤖 Ejecutando bot principal
+      - name: ▶️ Ejecutando bot.py...
         env:
           GOOGLE_CREDS_JSON: ${{ secrets.GOOGLE_CREDS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
-          ALERT_ES: ${{ secrets.ALERT_ES }}
-          ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
-          ALPHA_VANTAGE_KEY: ${{ secrets.NEWS_API_KEY }}
+          ALPHA_VANTAGE_KEY: ${{ secrets.ALPHA_VANTAGE_KEY }}
         run: |
-          echo "▶️ Ejecutando bot.py..."
+          echo "🔐 Iniciando Trading Bot con conexión a Google Sheets..."
           python bot.py
-
-      - name: ✅ Finalizado
-        run: echo "✅ Ejecución completada correctamente."
